buggery/tests/errors/uninitialized_variable.bgr

default:
  t(VAR)

t(X):
  $ ls @X
  
